--- a/Enigma/MainWindow.xaml
+++ b/Enigma/MainWindow.xaml
@@ -1,10 +1,38 @@
-﻿<NavigationWindow x:Class="Enigma.MainWindow"
+﻿<Window x:Class="Enigma.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:p="clr-namespace:Enigma.Properties"
+        xmlns:viewModels="clr-namespace:Enigma.ViewModel"
+        xmlns:views="clr-namespace:Enigma.View"
         mc:Ignorable="d"
-        Title="{x:Static p:Resources.MainTitle}" Height="450" Width="600">
-    
-</NavigationWindow>
+        Title="Excersise Collection" Height="450" Width="600">
+
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type viewModels:UserViewModel}">
+            <views:UserView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewModels:EnigmaViewModel}">
+            <views:enigma/>
+        </DataTemplate>
+    </Window.Resources>
+
+    <DockPanel LastChildFill="True">
+
+        <StackPanel x:Name="navigation" DockPanel.Dock="Left">
+
+            <Button Content="User" Command="{Binding UserCommand}"></Button>
+
+            <Button Content="Enigma" Command="{Binding EnigmaCommand}"></Button>
+
+            <Button Content="StarField" Command="{Binding StarFieldCommand}"></Button>
+
+        </StackPanel>
+
+        <ContentControl x:Name="Pages" DockPanel.Dock="Right" Content="{Binding SelectedViewModel}"/>
+
+    </DockPanel>
+
+</Window>
